add context menu, link and button
add tests

create headers file

fix for when no override folder

Change-Id: I60d6154f1b9f5ec3dc9b8291807cee6bad791262

--- a/front_end/panels/network/BUILD.gn
+++ b/front_end/panels/network/BUILD.gn
@@ -72,6 +72,7 @@ devtools_module("network") {
     "../../models/har:bundle",
     "../../models/issues_manager:bundle",
     "../../models/logs:bundle",
+    "../../models/persistence:bundle",
     "../../models/text_utils:bundle",
     "../../models/workspace:bundle",
     "../../panels/elements:bundle",
@@ -80,6 +81,7 @@ devtools_module("network") {
     "../../panels/sources:bundle",
     "../../panels/utils:bundle",
     "../../third_party/chromium/client-variations:bundle",
+    "../../ui/components/buttons:bundle",
     "../../ui/components/expandable_list:bundle",
     "../../ui/components/icon_button:bundle",
     "../../ui/legacy:bundle",
