Add Protocol Handlers section to Application Panel
Adding a section for Protocol Handlers in the App Manifest pane so users can view and test their protocol handlers defined in manifest directly from the DevTools without having to go to manifest.json or having to use a separate application/interface/website to test.

Bug: none
Change-Id: I54a4693e5e9ce10e11aa74c0cb1bffa25ee38780

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "check-lint": "third_party/node/node.py --output scripts/test/run_lint_check_js.mjs && third_party/node/node.py --output scripts/test/run_lint_check_css.js",
     "check-lint-css": "third_party/node/node.py --output scripts/test/run_lint_check_css.js",
     "collect-strings": "third_party/node/node.py --output third_party/i18n/collect-strings.js front_end",
-    "components-server": "third_party/node/node.py --output scripts/component_server/server.js",
+    "components-server": "vpython third_party/node/node.py --output scripts/component_server/server.js",
     "debug-e2etest": "DEBUG_TEST=1 npm run e2etest",
     "debug-interactionstest": "DEBUG_TEST=1 npm run interactionstest",
     "debug-test": "third_party/node/node.py --output scripts/npm_test.js --debug-devtools",
