Port General section of NetworkPanel's Headers View to custom component
Before adding an editor for response headers to the headers view, this
CL creates a custom component for the headers view. This is the first
of multiple CL's porting the existing headers view's functionality to
the new component.

The new component is only shown if the 'local overrides for response
headers' experiment is turned on.

Screenshot: https://i.imgur.com/qh4gL0k.png

Bug: 1297533
Change-Id: I2e49731546f4b4584626c61e886dcb1accafca8c

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -68,6 +68,7 @@ devtools_svg_sources = [
   "flex-direction-icon.svg",
   "flex-nowrap-icon.svg",
   "flex-wrap-icon.svg",
+  "green-ball-icon.svg",
   "help_outline.svg",
   "ic_changes.svg",
   "ic_checkmark_16x16.svg",
@@ -131,6 +132,7 @@ devtools_svg_sources = [
   "node_search_icon.svg",
   "plus_icon.svg",
   "preview_feature_video_thumbnail.svg",
+  "red-ball-icon.svg",
   "refresh_12x12_icon.svg",
   "resizeDiagonal.svg",
   "resizeHorizontal.svg",
@@ -147,6 +149,7 @@ devtools_svg_sources = [
   "triangle-collapsed.svg",
   "triangle-expanded.svg",
   "warning_icon.svg",
+  "yellow-ball-icon.svg",
 ]
 
 devtools_src_svg_files = []
