--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -58,6 +58,7 @@ grd_files_release_sources = [
   "front_end/Images/flex-direction-icon.svg",
   "front_end/Images/flex-nowrap-icon.svg",
   "front_end/Images/flex-wrap-icon.svg",
+  "front_end/Images/green-ball-icon.svg",
   "front_end/Images/help_outline.svg",
   "front_end/Images/ic_changes.svg",
   "front_end/Images/ic_checkmark_16x16.svg",
@@ -128,6 +129,7 @@ grd_files_release_sources = [
   "front_end/Images/profileGroupIcon.png",
   "front_end/Images/profileIcon.png",
   "front_end/Images/profileSmallIcon.png",
+  "front_end/Images/red-ball-icon.svg",
   "front_end/Images/refresh_12x12_icon.svg",
   "front_end/Images/resizeDiagonal.svg",
   "front_end/Images/resizeHorizontal.svg",
@@ -152,6 +154,7 @@ grd_files_release_sources = [
   "front_end/Images/triangle-expanded.svg",
   "front_end/Images/warning_icon.svg",
   "front_end/Images/whatsnew.avif",
+  "front_end/Images/yellow-ball-icon.svg",
   "front_end/Tests.js",
   "front_end/core/common/common-legacy.js",
   "front_end/core/common/common.js",
@@ -1112,6 +1115,8 @@ grd_files_debug_sources = [
   "front_end/panels/network/SignedExchangeInfoView.js",
   "front_end/panels/network/binaryResourceView.css.js",
   "front_end/panels/network/blockedURLsPane.css.js",
+  "front_end/panels/network/components/RequestHeadersView.css.js",
+  "front_end/panels/network/components/RequestHeadersView.js",
   "front_end/panels/network/components/RequestTrustTokensView.css.js",
   "front_end/panels/network/components/RequestTrustTokensView.js",
   "front_end/panels/network/components/WebBundleInfoView.css.js",
