Add Protocol Handlers section to Application Panel
Adding a section for Protocol Handlers in the App Manifest pane so users can view and test their protocol handlers defined in manifest directly from the DevTools without having to go to manifest.json or having to use a separate application/interface/website to test.

Explainer: https://docs.google.com/document/d/1XsKG_yqHEwWYvI2O0drMliDhF3GaLLGTkC2XmETMSrI/edit?usp=sharing

Bug: none
Change-Id: I54a4693e5e9ce10e11aa74c0cb1bffa25ee38780

--- a/package.json
+++ b/package.json
@@ -28,12 +28,11 @@
     "build": "autoninja -C out/Default",
     "build-release": "autoninja -C out/Release",
     "check": "npm run check-lint && npm run check-loc",
-    "check-external-links": "vpython third_party/node/node.py --output scripts/check_external_links.js",
-    "check-lint": "vpython third_party/node/node.py --output scripts/test/run_lint_check_js.mjs && vpython third_party/node/node.py --output scripts/test/run_lint_check_css.js",
-    "check-lint-js": "vpython third_party/node/node.py --output scripts/test/run_lint_check_js.mjs",
-    "check-lint-css": "vpython third_party/node/node.py --output scripts/test/run_lint_check_css.js",
-    "collect-strings": "vpython third_party/node/node.py --output third_party/i18n/collect-strings.js front_end",
-    "components-server": "vpython third_party/node/node.py --output scripts/component_server/server.js",
+    "check-external-links": "third_party/node/node.py --output scripts/check_external_links.js",
+    "check-lint": "third_party/node/node.py --output scripts/test/run_lint_check_js.mjs && third_party/node/node.py --output scripts/test/run_lint_check_css.js",
+    "check-lint-css": "third_party/node/node.py --output scripts/test/run_lint_check_css.js",
+    "collect-strings": "third_party/node/node.py --output third_party/i18n/collect-strings.js front_end",
+    "components-server": "third_party/node/node.py --output scripts/component_server/server.js",
     "debug-e2etest": "DEBUG_TEST=1 npm run e2etest",
     "debug-interactionstest": "DEBUG_TEST=1 npm run interactionstest",
     "debug-test": "vpython third_party/node/node.py --output scripts/npm_test.js --debug-devtools",
