--- a/test/e2e/application/BUILD.gn
+++ b/test/e2e/application/BUILD.gn
@@ -8,6 +8,7 @@ node_ts_library("application") {
   sources = [
     "cookies_test.ts",
     "frame-tree_test.ts",
+    "manifest-protocol-handlers_test.ts",
     "manifest_test.ts",
     "reporting-api_test.ts",
     "service-worker-network_test.ts",
