Add performance start/stop notifications to the extension API
Bug: 1320284
Change-Id: Iffb8a8f74bbac5108f521426ac6e6f0501fd6bf0
Signed-off-by: Victor Porof <victorporof@chromium.org>

--- a/front_end/models/extensions/BUILD.gn
+++ b/front_end/models/extensions/BUILD.gn
@@ -11,6 +11,7 @@ devtools_module("extensions") {
     "ExtensionAPI.ts",
     "ExtensionPanel.ts",
     "ExtensionServer.ts",
+    "ExtensionTraceNotifications.ts",
     "ExtensionTraceProvider.ts",
     "ExtensionView.ts",
     "LanguageExtensionEndpoint.ts",
