--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -714,6 +714,7 @@ grd_files_debug_sources = [
   "front_end/models/extensions/ExtensionAPI.js",
   "front_end/models/extensions/ExtensionPanel.js",
   "front_end/models/extensions/ExtensionServer.js",
+  "front_end/models/extensions/ExtensionTraceNotifications.js",
   "front_end/models/extensions/ExtensionTraceProvider.js",
   "front_end/models/extensions/ExtensionView.js",
   "front_end/models/extensions/LanguageExtensionEndpoint.js",
