Extensions: add Recorder extensions
Bug: 1325751
Change-Id: Ibe4f13a2fd868530c72eab7562efe9ab33bbddd7

--- a/test/e2e/extensions/BUILD.gn
+++ b/test/e2e/extensions/BUILD.gn
@@ -10,10 +10,12 @@ node_ts_library("extensions") {
     "can-open-resources-with-columns_test.ts",
     "can-search-in-extension-panel_test.ts",
     "debugger-language-plugins_test.ts",
+    "recorder-plugins_test.ts",
   ]
 
   deps = [
     "../../../extension-api",
+    "../../../front_end/models/extensions:bundle",
     "../../shared",
     "../helpers",
   ]
