--- a/test/e2e/resources/sources/BUILD.gn
+++ b/test/e2e/resources/sources/BUILD.gn
@@ -78,6 +78,7 @@ copy_to_gen("sources") {
     "sourcemap-stepping.html",
     "sourcemap-stepping.map",
     "sourcemap-without-mappings.map",
+    "sourceurl.html",
     "wasm/add.wasm",
     "wasm/call-to-add-wasm.html",
     "wasm/callstack-wasm-to-js.html",
