--- a/front_end/models/extensions/BUILD.gn
+++ b/front_end/models/extensions/BUILD.gn
@@ -14,6 +14,8 @@ devtools_module("extensions") {
     "ExtensionTraceProvider.ts",
     "ExtensionView.ts",
     "LanguageExtensionEndpoint.ts",
+    "RecorderExtensionEndpoint.ts",
+    "RecorderPluginManager.ts",
   ]
 
   deps = [
@@ -47,6 +49,7 @@ devtools_entrypoint("bundle") {
     "../../panels/elements/*",
     "../../panels/sources/*",
     "../../panels/timeline/*",
+    "//test/unittests/front_end/models/extensions:extensions",
   ]
 
   visibility += devtools_models_visibility
