--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1102,6 +1102,7 @@ grd_files_debug_sources = [
   "front_end/panels/network/NetworkTimeCalculator.js",
   "front_end/panels/network/NetworkWaterfallColumn.js",
   "front_end/panels/network/RequestCookiesView.js",
+  "front_end/panels/network/RequestExtensionsView.js",
   "front_end/panels/network/RequestHTMLView.js",
   "front_end/panels/network/RequestHeadersView.js",
   "front_end/panels/network/RequestInitiatorView.js",
@@ -1128,6 +1129,7 @@ grd_files_debug_sources = [
   "front_end/panels/network/networkTimingTable.css.js",
   "front_end/panels/network/networkWaterfallColumn.css.js",
   "front_end/panels/network/requestCookiesView.css.js",
+  "front_end/panels/network/requestExtensionsView.css.js",
   "front_end/panels/network/requestHTMLView.css.js",
   "front_end/panels/network/requestHeadersTree.css.js",
   "front_end/panels/network/requestHeadersView.css.js",
