--- a/test/e2e/resources/extensions/BUILD.gn
+++ b/test/e2e/resources/extensions/BUILD.gn
@@ -15,5 +15,8 @@ copy_to_gen("extensions") {
 }
 
 wasm_module("extension_wasm_modules") {
-  sources = [ "global_variable.wat" ]
+  sources = [
+    "can_access_wasm_data.wat",
+    "global_variable.wat",
+  ]
 }
