[network] Emit text/event-stream events for non-EventSource requests
This CL hooks up response body streaming with a "server sent events"
format parser. This is required for requests of type "fetch" or "XHR"
that use the text/event-stream mime type.

In this case we don't get the CDP events themselves but have to do
the parsing ourselves.

We move all this logic into a separate class that also stores the
already received messages.

R=wolfi@chromium.org

Bug: 1509336
Change-Id: Iae951e25e8c067a259850e668964ba9f9c3bc4c2

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -776,6 +776,7 @@ grd_files_debug_sources = [
   "front_end/core/sdk/ScreenCaptureModel.js",
   "front_end/core/sdk/Script.js",
   "front_end/core/sdk/SecurityOriginManager.js",
+  "front_end/core/sdk/ServerSentEvents.js",
   "front_end/core/sdk/ServerSentEventsProtocol.js",
   "front_end/core/sdk/ServerTiming.js",
   "front_end/core/sdk/ServiceWorkerCacheModel.js",
