Add visual_logging rules to Recorder BUILD
Bug: 1522453
Change-Id: I340f08a7e52a04020aeb2cf54d858e6598761657

--- a/front_end/panels/recorder/BUILD.gn
+++ b/front_end/panels/recorder/BUILD.gn
@@ -29,6 +29,7 @@ devtools_module("recorder") {
     "../../ui/components/dialogs:bundle",
     "../../ui/components/icon_button:bundle",
     "../../ui/components/menus:bundle",
+    "../../ui/visual_logging:bundle",
     "./components:bundle",
     "./controllers:bundle",
     "./converters:bundle",
