Fetch color stylesheet dynamically only in not hosted mode
Bug: 1522781
Change-Id: I91bb87913d37f8d3ac23506cd6681495a6033873

--- a/front_end/ui/legacy/utils/BUILD.gn
+++ b/front_end/ui/legacy/utils/BUILD.gn
@@ -16,6 +16,7 @@ devtools_module("ui_utils") {
   ]
 
   deps = [
+    "../../../core/host:bundle",
     "../../../core/platform:bundle",
     "../../../core/root:bundle",
     "../../../ui/legacy/theme_support:bundle",
