Move MimeType.ts from sdk/ to platform/
This is a pre-requisite to move ContentData to models/text_utils since
sdk/ depends on models/text_utils :(

R=pfaffe@chromium.org

Bug: 1509336
Change-Id: I12b16443f8398d7808f3afa7dbb6f40f53e87180

--- a/front_end/core/platform/BUILD.gn
+++ b/front_end/core/platform/BUILD.gn
@@ -39,6 +39,7 @@ devtools_pre_built("dcheck") {
 devtools_module("platform") {
   sources = [
     "DevToolsPath.ts",
+    "MimeType.ts",
     "Timing.ts",
     "UIString.ts",
     "UserVisibleError.ts",
