--- a/test/unittests/front_end/core/platform/BUILD.gn
+++ b/test/unittests/front_end/core/platform/BUILD.gn
@@ -13,6 +13,7 @@ ts_library("platform") {
     "DevToolsPath_test.ts",
     "KeyboardUtilities_test.ts",
     "MapUtilities_test.ts",
+    "MimeType_test.ts",
     "NumberUtilities_test.ts",
     "SetUtilities_test.ts",
     "StringUtilities_test.ts",
