Move ContentData.ts from core/sdk/ to models/text_utils/
We want to replace "DeferredContent" with "ContentData" in the long
term. Currently lots of use-sites of "DeferredContent" manually use a
TextDecoder to decode base64 encoded text content (or worse,
window.btoa). This only works for utf-8/ascii data as DeferredContent
(or the ContentProvider interface) doesn't carry information about
text encoding.

To make this possible we move "ContentData" up the dependency chain
into "text_utils".

Note: We really should move text_utils into core/ given that
core/sdk depends on it.

R=pfaffe@chromium.org

Bug: 1509336
Change-Id: If17bd50dfe6b32927087db88a5a8a61ef1545383

--- a/front_end/models/har/BUILD.gn
+++ b/front_end/models/har/BUILD.gn
@@ -19,6 +19,7 @@ devtools_module("har") {
     "../../core/platform:bundle",
     "../../core/sdk:bundle",
     "../../generated:protocol",
+    "../text_utils:bundle",
   ]
 }
 
