--- a/test/unittests/front_end/core/sdk/BUILD.gn
+++ b/test/unittests/front_end/core/sdk/BUILD.gn
@@ -18,7 +18,6 @@ ts_library("sdk") {
     "CSSStyleSheetHeader_test.ts",
     "ChildTargetManager_test.ts",
     "ConsoleModel_test.ts",
-    "ContentData_test.ts",
     "CookieModel_test.ts",
     "CookieParser_test.ts",
     "Cookie_test.ts",
@@ -54,6 +53,7 @@ ts_library("sdk") {
     "../../../../../front_end/generated:protocol",
     "../../../../../front_end/models/bindings:bundle",
     "../../../../../front_end/models/persistence:bundle",
+    "../../../../../front_end/models/text_utils:bundle",
     "../../../../../front_end/models/trace:bundle",
     "../../../../../front_end/models/workspace:bundle",
     "../../helpers",
