--- a/test/unittests/front_end/models/text_utils/BUILD.gn
+++ b/test/unittests/front_end/models/text_utils/BUILD.gn
@@ -7,6 +7,7 @@ import("../../../../../third_party/typescript/typescript.gni")
 ts_library("text_utils") {
   testonly = true
   sources = [
+    "ContentData_test.ts",
     "StaticContentProvider_test.ts",
     "TextCursor_test.ts",
     "TextRange_test.ts",
@@ -14,5 +15,8 @@ ts_library("text_utils") {
     "Text_test.ts",
   ]
 
-  deps = [ "../../../../../front_end/models/text_utils:bundle" ]
+  deps = [
+    "../../../../../front_end/core/platform:bundle",
+    "../../../../../front_end/models/text_utils:bundle",
+  ]
 }
