--- a/test/unittests/front_end/panels/network/BUILD.gn
+++ b/test/unittests/front_end/panels/network/BUILD.gn
@@ -20,6 +20,8 @@ ts_library("network") {
   ]
 
   deps = [
+    "../../../../../front_end/core/sdk:bundle",
+    "../../../../../front_end/models/text_utils:bundle",
     "../../../../../front_end/panels/network:bundle",
     "../../../../../front_end/panels/network:meta",
     "../../helpers",
