[VisualLogging] Instrument animations panel
Fixed: b/308381658
Change-Id: I7fd4ab1a14ab17723da47f569bd98680dd9a0aa4

--- a/front_end/panels/animation/BUILD.gn
+++ b/front_end/panels/animation/BUILD.gn
@@ -32,6 +32,7 @@ devtools_module("animation") {
     "../../generated:protocol",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/inline_editor:bundle",
+    "../../ui/visual_logging:bundle",
   ]
 }
 
