[VisualLogging] Instrument animations panel
Fixed: b/308381658
Change-Id: I7fd4ab1a14ab17723da47f569bd98680dd9a0aa4

--- a/front_end/ui/legacy/components/inline_editor/BUILD.gn
+++ b/front_end/ui/legacy/components/inline_editor/BUILD.gn
@@ -67,6 +67,7 @@ devtools_module("inline_editor") {
     "../../../../ui/legacy:bundle",
     "../../../../ui/legacy/components/utils:bundle",
     "../../../../ui/lit-html:bundle",
+    "../../../../ui/visual_logging:bundle",
   ]
 
   visibility = [ "../../../../component_docs/*" ]
