RPP extensibility based on User Timings prototype
Bug: none
Change-Id: Idd46f58ad5693be48b467b18ea52679acea75573

--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -30,6 +30,8 @@ devtools_module("timeline") {
     "CountersGraph.ts",
     "EventUICategory.ts",
     "EventsTimelineTreeView.ts",
+    "ExtensionDataGatherer.ts",
+    "ExtensionTrackAppender.ts",
     "GPUTrackAppender.ts",
     "Initiators.ts",
     "InteractionsTrackAppender.ts",
