--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -937,6 +937,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/extras/Metadata.js",
   "front_end/models/trace/handlers/AnimationHandler.js",
   "front_end/models/trace/handlers/AuctionWorkletsHandler.js",
+  "front_end/models/trace/handlers/ExtensionTraceDataHandler.js",
   "front_end/models/trace/handlers/FramesHandler.js",
   "front_end/models/trace/handlers/GPUHandler.js",
   "front_end/models/trace/handlers/InitiatorsHandler.js",
@@ -1589,6 +1590,8 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/CountersGraph.js",
   "front_end/panels/timeline/EventUICategory.js",
   "front_end/panels/timeline/EventsTimelineTreeView.js",
+  "front_end/panels/timeline/ExtensionDataGatherer.js",
+  "front_end/panels/timeline/ExtensionTrackAppender.js",
   "front_end/panels/timeline/GPUTrackAppender.js",
   "front_end/panels/timeline/Initiators.js",
   "front_end/panels/timeline/InteractionsTrackAppender.js",
