Support StreamingContentProvider in ResourceSourceFrame
This CL extends the ResourceSourceFrame to be able to deal with
StreamingContentProviders. The impl is straight-forward: Each time
the underlying content changes we set the new content in the view.

R=pfaffe@chromium.org

Bug: 1509336
Change-Id: I0c70c0593a8d13a58689d50f75e1b2f6ae3fe66c

--- a/test/unittests/front_end/ui/legacy/components/source_frame/BUILD.gn
+++ b/test/unittests/front_end/ui/legacy/components/source_frame/BUILD.gn
@@ -6,7 +6,19 @@ import("../../../../../../../third_party/typescript/typescript.gni")
 
 ts_library("source_frame") {
   testonly = true
-  sources = [ "SourceFrame_test.ts" ]
+  sources = [
+    "ResourceSourceFrame_test.ts",
+    "SourceFrame_test.ts",
+  ]
 
-  deps = [ "../../../../helpers" ]
+  deps = [
+    "../../../../../../../front_end/core/common:bundle",
+    "../../../../../../../front_end/core/platform:bundle",
+    "../../../../../../../front_end/core/root:bundle",
+    "../../../../../../../front_end/models/text_utils:bundle",
+    "../../../../../../../front_end/third_party/codemirror.next:bundle",
+    "../../../../../../../front_end/ui/legacy:bundle",
+    "../../../../../../../front_end/ui/legacy/components/source_frame:bundle",
+    "../../../../helpers",
+  ]
 }
