--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -201,6 +201,7 @@ grd_files_release_sources = [
   "front_end/Images/review.svg",
   "front_end/Images/right-panel-close.svg",
   "front_end/Images/right-panel-open.svg",
+  "front_end/Images/scissors.svg",
   "front_end/Images/screen-rotation.svg",
   "front_end/Images/search.svg",
   "front_end/Images/securityIcons.svg",
