--- a/front_end/panels/explain/BUILD.gn
+++ b/front_end/panels/explain/BUILD.gn
@@ -58,6 +58,7 @@ devtools_entrypoint("meta") {
 
   deps = [
     ":bundle",
+    "../../core/common:bundle",
     "../../core/i18n:bundle",
     "../../core/root:bundle",
     "../../ui/legacy:bundle",
