Implement the following error states
- not logged in
- sync disabled

Bug: b/299423255
Change-Id: Ibd3fb60e067d111cb0ccbb176f8dc2d13de42462

--- a/front_end/panels/explain/BUILD.gn
+++ b/front_end/panels/explain/BUILD.gn
@@ -25,6 +25,7 @@ devtools_module("explain") {
   deps = [
     ":css_files",
     "../../core/host:bundle",
+    "../../core/sdk:bundle",
     "../../models/logs:bundle",
     "../../third_party/marked:bundle",
     "../../ui/components/markdown_view:bundle",
