Add brick breaker game to perf panel
Bug: none
Change-Id: I2a931e9013738e1d1f5d439ff5b1d999174b2694

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -231,6 +231,7 @@ devtools_svg_sources = [
   "triangle-right.svg",
   "triangle-up.svg",
   "undo.svg",
+  "wand.svg",
   "warning-filled.svg",
   "warning.svg",
   "watch.svg",
