--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -235,6 +235,7 @@ grd_files_release_sources = [
   "front_end/Images/triangle-right.svg",
   "front_end/Images/triangle-up.svg",
   "front_end/Images/undo.svg",
+  "front_end/Images/wand.svg",
   "front_end/Images/warning-filled.svg",
   "front_end/Images/warning.svg",
   "front_end/Images/watch.svg",
@@ -2074,6 +2075,7 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/components/object_ui/objectPopover.css.js",
   "front_end/ui/legacy/components/object_ui/objectPropertiesSection.css.js",
   "front_end/ui/legacy/components/object_ui/objectValue.css.js",
+  "front_end/ui/legacy/components/perf_ui/BrickBreaker.js",
   "front_end/ui/legacy/components/perf_ui/ChartViewport.js",
   "front_end/ui/legacy/components/perf_ui/FilmStripView.js",
   "front_end/ui/legacy/components/perf_ui/FlameChart.js",
