--- a/front_end/ui/legacy/components/perf_ui/BUILD.gn
+++ b/front_end/ui/legacy/components/perf_ui/BUILD.gn
@@ -28,6 +28,7 @@ generate_css("legacy_css_files") {
 
 devtools_module("perf_ui") {
   sources = [
+    "BrickBreaker.ts",
     "ChartViewport.ts",
     "FilmStripView.ts",
     "FlameChart.ts",
