Refactor explain actions
Bug: b/299423255
Change-Id: Iecaeed02c3644e6a55fe3118b69ff0970e29dc98

--- a/front_end/panels/explain/BUILD.gn
+++ b/front_end/panels/explain/BUILD.gn
@@ -62,6 +62,7 @@ devtools_entrypoint("meta") {
     "../../core/common:bundle",
     "../../core/i18n:bundle",
     "../../core/root:bundle",
+    "../../panels/console:bundle",
     "../../ui/legacy:bundle",
   ]
 
