--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2074,6 +2074,7 @@ grd_files_debug_sources = [
   "front_end/ui/legacy/components/object_ui/objectPopover.css.js",
   "front_end/ui/legacy/components/object_ui/objectPropertiesSection.css.js",
   "front_end/ui/legacy/components/object_ui/objectValue.css.js",
+  "front_end/ui/legacy/components/perf_ui/BrickBreaker.js",
   "front_end/ui/legacy/components/perf_ui/ChartViewport.js",
   "front_end/ui/legacy/components/perf_ui/FilmStripView.js",
   "front_end/ui/legacy/components/perf_ui/FlameChart.js",
