[scopes] Add SourceMap scope types
This CL adds the type definitions from the source map scopes proposal.

Follow-up CLs will implement decoding and using the scope information.
Note that there will probably be some churn in these types and the
encoding as the proposal is still hammered out.

R=pfaffe@chromium.org

Bug: 40277685
Change-Id: I19617b086a8c498e0be8e2a892df5559c25ceeb6

--- a/front_end/core/sdk/BUILD.gn
+++ b/front_end/core/sdk/BUILD.gn
@@ -76,6 +76,7 @@ devtools_module("sdk") {
     "ServiceWorkerManager.ts",
     "SourceMap.ts",
     "SourceMapManager.ts",
+    "SourceMapScopes.ts",
     "StorageBucketsModel.ts",
     "StorageKeyManager.ts",
     "Target.ts",
