--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -784,6 +784,7 @@ grd_files_debug_sources = [
   "front_end/core/sdk/ServiceWorkerManager.js",
   "front_end/core/sdk/SourceMap.js",
   "front_end/core/sdk/SourceMapManager.js",
+  "front_end/core/sdk/SourceMapScopes.js",
   "front_end/core/sdk/StorageBucketsModel.js",
   "front_end/core/sdk/StorageKeyManager.js",
   "front_end/core/sdk/Target.js",
