Display setting disabled reason for insights
Bug: b/299423255
Change-Id: Id9aa04766487e2171168ff9d48bd3b513aed1220

--- a/front_end/panels/explain/BUILD.gn
+++ b/front_end/panels/explain/BUILD.gn
@@ -66,5 +66,8 @@ devtools_entrypoint("meta") {
     "../../ui/legacy:bundle",
   ]
 
-  visibility = [ "../../entrypoints/*" ]
+  visibility = [
+    "../../entrypoints/*",
+    "../../panels/settings/*",
+  ]
 }
