--- a/front_end/panels/settings/BUILD.gn
+++ b/front_end/panels/settings/BUILD.gn
@@ -27,6 +27,7 @@ devtools_module("settings") {
     "../../core/host:bundle",
     "../../core/i18n:bundle",
     "../../core/root:bundle",
+    "../../panels/explain:meta",
     "../../ui/components/icon_button:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/utils:bundle",
@@ -47,6 +48,7 @@ devtools_entrypoint("bundle") {
     ":*",
     "../../../test/unittests/front_end/entrypoints/missing_entrypoints/*",
     "../../entrypoints/*",
+    "../../panels/explain/*",
     "../../panels/profiler/*",
   ]
 
